# fronius-bridge

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  DEPLOYMENT.md  README.md  config.h.in  config.yaml
.github/workflows/: build.yml  release.yml
db/inverter/: 001_initial.sql  002_rollup.sql  003_power_agg.sql  004_retention.sql
db/meter/: 001_initial.sql  002_rollup.sql  003_power_agg.sql  004_retention.sql
db/public/: 001_registry.sql  002_site_energy.sql  003_site_rollup.sql  004_site_location.sql
include/: change_gate.h  config_yaml.h  db_error.h  easy_meter.h  easy_meter_master.h  fronius_meter.h  fronius_meter_master.h  inverter_master.h  inverter_types.h  json_utils.h  logger.h  math_utils.h  meter_master.h  meter_slave.h  meter_types.h  migrations.h  modbus_master.h  mqtt_client.h  pg.h  postgres_client.h  schema_migrator.h  signal_handler.h  utils.h
src/: config_yaml.cpp  easy_meter.cpp  easy_meter_master.cpp  fronius_meter.cpp  fronius_meter_master.cpp  inverter_master.cpp  main.cpp  meter_master.cpp  meter_slave.cpp  migrations.cpp  modbus_master.cpp  mqtt_client.cpp  pg.cpp  postgres_client.cpp  schema_migrator.cpp
